@@ -499,6 +499,8 @@ _pick_step_nodes (struct job_record  *job_ptr,
 				return NULL;
 			}
 		}
+		job_ptr->job_state &= (~JOB_CONFIGURING);
+		debug("Configuration for job %u complete", job_ptr->job_id);
 	}
 
 	/* In exclusive mode, just satisfy the processor count.
@@ -1299,7 +1301,7 @@ step_create(job_step_create_request_msg_t *step_specs,
 
 	/* Here is where the node list is set for the step */
 	if(step_specs->node_list &&
-	   step_specs->task_dist == SLURM_DIST_ARBITRARY) {
+	   (step_specs->task_dist == SLURM_DIST_ARBITRARY)) {
 		step_node_list = xstrdup(step_specs->node_list);
 		xfree(step_specs->node_list);
 		step_specs->node_list = bitmap2node_name(nodeset);
