@@ -168,6 +168,9 @@ if {$job_id == 0} {
 for {set node_id 0} {$node_id < $node_count} {incr node_id} {
 	set file_out_n_glob  "test$test_id.n.$node_id.output"
 	if {[wait_for_file $file_out_n_glob] != 0} {
+		if {$node_id == 1} {
+			send_user "\nNOTE: This failure is expected on front-end configurations\n"
+		}
 		set exit_code 1
 		break
 	} else {
